--- a/index.html
+++ b/index.html
@@ -2336,7 +2336,7 @@ Designed for everyday cooking, this bundle allows you to blend, grind, fry, bake
       </button>
 
      <a
-  href="https://checkout3.takealot-shop.online/"
+  href="https://checkoutairfryercombo.takealotpromos.shop/"
   class="add-btn"
   aria-label="Add to Cart"
   target="_blank"
@@ -2633,6 +2633,7 @@ selectOffer(0);
   </script>
 </body>
 </html>
+
 
 
 
